# timectl

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/timectl/: cli.py  inspect.py  settime.py
src/timewarp/: cli.py  timefmt.py
