[project]
name = "timectl"
version = "0.1.0"
description = "CLI to inspect and set file timestamps (atime, mtime, btime, and best-effort ctime)."
readme = "README.md"
authors = [
    { name = "Touken", email = "touken928@foxmail.com" }
]
requires-python = "==3.10.*"
dependencies = []

[project.scripts]
timectl = "timectl:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
